--- a/pagina_web/templates/base.html
+++ b/pagina_web/templates/base.html
@@ -1,10 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>LISTA TAREAS</title>
+    <link rel="stylesheet" href="{% static 'app.css' %}">
 </head>
 <body>
-{% block content %}{% endblock %}
+<main>{% block content %}{% endblock %}</main>
 </body>
 </html>
