--- a/pagina_web/templates/lista_tareas/detalles.html
+++ b/pagina_web/templates/lista_tareas/detalles.html
@@ -3,4 +3,5 @@
 <h1>{{ tarea.titulo }}</h1>
 <p>{{ tarea.descripcion}}</p>
 <p>{{ tarea.get_estado_display }}</p>
+<a href="{% url 'lista_tareas' %}">Volver</a>
 {% endblock %}
