Agrega enlace "Volver" en formularios de creación y edición de tareas, y mejora la visualización del estado en la lista de tareas

--- a/pagina_web/templates/lista_tareas/lista.html
+++ b/pagina_web/templates/lista_tareas/lista.html
@@ -4,6 +4,7 @@
 <ul>
     {% for tarea in tareas %}
     <li>
+        {{ tarea.get_estado_display}} -
         {{ tarea.titulo }}
         <a href="{% url 'detalle_tarea' tarea.id %}">Ver Detalles</a>
         <a href="{% url 'editar_tarea' tarea.id %}">Editar</a>
