--- a/pagina_web/templates/lista_tareas/crear.html
+++ b/pagina_web/templates/lista_tareas/crear.html
@@ -6,5 +6,6 @@
     {% csrf_token %}
     {{ form }}
     <button type="submit">Crear</button>
+    <a href="{% url 'lista_tareas' %}">Volver</a>
 </form>
 {% endblock %}
