--- a/pagina_web/templates/lista_tareas/editar.html
+++ b/pagina_web/templates/lista_tareas/editar.html
@@ -5,5 +5,6 @@
     {% csrf_token %}
     {{ form }}
     <button type="submit">Guardar</button>
+    <a href="{% url 'lista_tareas' %}">Volver</a>
 </form>
 {% endblock %}
